--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -14,55 +14,55 @@ next: SA1_22.html
   <th class='ch'>(一五) 使</th>
   <th class='en'>21 (15). Tendencies</th>
   <tr>
-    <td class="ch" title='t99.2.3a6'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.3a6'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a7'>爾時，有異比丘來詣佛所。 稽首佛足，却住一面。 白佛言： 「善哉，世尊！今當為我略説法要。 我聞法已，當獨一靜處，修不放逸。 修不放逸已，當復思惟： 『所以善男子出家，剃除鬚髮，身著法服，信家，非家，出家。 為究竟無上梵行。 現法作證： 「我生已盡，梵行已立，所作已作。 自知不受後有。」』」</td>
-    <td id='p2'>2. At the time, a certain monk came to the Buddha. He bowed his head at the Buddha’s feet, and withdrew to stand to one side. He then said, “It’d be good, Bhagavān, if you would briefly explain the Dharma for me now. After hearing the Dharma, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home [to train on the path]. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll realize in the present life: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”</td>
+    <td class='ch' title='t99.2.3a7'>爾時，有異比丘來詣佛所。 稽首佛足，却住一面。 白佛言： 「善哉，世尊！今當為我略説法要。 我聞法已，當獨一靜處，修不放逸。 修不放逸已，當復思惟： 『所以善男子出家，剃除鬚髮，身著法服，信家，非家，出家。 為究竟無上梵行。 現法作證： 「我生已盡，梵行已立，所作已作。 自知不受後有。」』」</td>
+    <td id='p2'>2. At the time, a certain monk came to the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said, “It’d be good, Bhagavān, if you would briefly explain the Dharma for me now. After hearing the Dharma, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home [to train on the path]. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll realize in the present life: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a13'>爾時，世尊告彼比丘： 「善哉，善哉！比丘，快説此言： 『云當為我略説法要？ 我聞法已，獨一靜處修不放逸⋯乃至⋯ 「自知不受後有。」』 如是説耶？」</td>
+    <td class='ch' title='t99.2.3a13'>爾時，世尊告彼比丘： 「善哉，善哉！比丘，快説此言： 『云當為我略説法要？ 我聞法已，獨一靜處修不放逸⋯乃至⋯ 「自知不受後有。」』 如是説耶？」</td>
     <td id='p3'>3. The Bhagavān told that monk, “Good, good! Monk, I’m glad you’ve said, ‘[Bhagavān,] give me a brief explanation of the Dharma. From that brief explanation of the Dharma, I will get a full understanding of its meaning. I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ Is this what you said?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a16'>比丘白佛： 「如是，世尊。」</td>
+    <td class='ch' title='t99.2.3a16'>比丘白佛： 「如是，世尊。」</td>
     <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a17'>佛告比丘： 「諦聽，諦聽！善思念之。 當為汝説。 比丘，若隨使使者，即隨使死。 若隨死者，為取所縛。 比丘，若不隨使使，則不隨使死。 不隨使死者，則於取解脱。」</td>
+    <td class='ch' title='t99.2.3a17'>佛告比丘： 「諦聽，諦聽！善思念之。 當為汝説。 比丘，若隨使使者，即隨使死。 若隨死者，為取所縛。 比丘，若不隨使使，則不隨使死。 不隨使死者，則於取解脫。」</td>
     <td id='p4'>4. The Buddha told the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, if something brings about the tendencies, then it brings about death.<sup id="ref2"><a href="#n2">2</a></sup> If something brings about death, then it’s bound by grasping. Monk, if it doesn’t bring about the tendencies, then it won’t bring about death. If something doesn’t bring about death, then it’s freed from grasping.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a21'>比丘白佛： 「知已，世尊！ 知已，善逝！」</td>
+    <td class='ch' title='t99.2.3a21'>比丘白佛： 「知已，世尊！ 知已，善逝！」</td>
     <td>The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a21'>佛告比丘： 「汝云何於我略説法中廣解其義？」</td>
+    <td class='ch' title='t99.2.3a21'>佛告比丘： 「汝云何於我略説法中廣解其義？」</td>
     <td id='p5'>5. The Buddha asked the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a22'>比丘白佛言： 「世尊，色隨使使，色隨使死。 隨使使隨使死者則為取所縛。 如是，受⋯想⋯行⋯識隨使使隨使死。 隨使使隨使死者，為取所縛。</td>
+    <td class='ch' title='t99.2.3a22'>比丘白佛言： 「世尊，色隨使使，色隨使死。 隨使使隨使死者則為取所縛。 如是，受⋯想⋯行⋯識隨使使隨使死。 隨使使隨使死者，為取所縛。</td>
     <td id='p6'>6. The monk said to the Buddha, “Bhagavān, form brings about the tendencies, and form brings about death. Something that brings about the tendencies and death is bound by grasping. Thus, feeling … conception … volition … awareness brings about the tendencies, and awareness brings about death. Something that brings about the tendencies and brings about death is bound by grasping.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a26'>「世尊，若色不隨使使，不隨使死。 不隨使使不隨使死者，則於取解脱。 如是，受⋯想⋯行⋯識不隨使使不隨使死。 不隨使使不隨使死者，則於取解脱。 如是，世尊，略説法中廣解其義。」</td>
+    <td class='ch' title='t99.2.3a26'>「世尊，若色不隨使使，不隨使死。 不隨使使不隨使死者，則於取解脫。 如是，受⋯想⋯行⋯識不隨使使不隨使死。 不隨使使不隨使死者，則於取解脫。 如是，世尊，略説法中廣解其義。」</td>
     <td id='p7'>7. “Bhagavān, if form doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. Thus, if feeling … conception … volition … awareness doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. I understand the Bhagavān’s brief explanation of the Dharma in this way.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3b1'>佛告比丘： 「善哉！善哉，比丘，於我略説法中廣解其義。 所以者何？ 色隨使使，隨使死。 隨使使隨使死者，則為取所縛。 如是，受⋯想⋯行⋯識隨使使，隨使死。 隨使使隨使死者，則為取所縛。</td>
+    <td class='ch' title='t99.2.3b1'>佛告比丘： 「善哉！善哉，比丘，於我略説法中廣解其義。 所以者何？ 色隨使使，隨使死。 隨使使隨使死者，則為取所縛。 如是，受⋯想⋯行⋯識隨使使，隨使死。 隨使使隨使死者，則為取所縛。</td>
     <td id='p8'>8. The Buddha told the monk, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? If form brings about the tendencies, it brings about death. Something that brings about the tendencies and brings about death is bound by grasping. Thus, if feeling … conception … volition … awareness brings about the tendencies, it brings about death. Something that brings about the tendencies and brings about death is bound by grasping.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3b5'>「比丘，色不隨使使，不隨使死。 不隨使使不隨使死者，則於取解脱。 如是，受⋯想⋯行⋯識不隨使使，不隨使死。 不隨使使不隨使死者，則於取解脱。」</td>
+    <td class='ch' title='t99.2.3b5'>「比丘，色不隨使使，不隨使死。 不隨使使不隨使死者，則於取解脫。 如是，受⋯想⋯行⋯識不隨使使，不隨使死。 不隨使使不隨使死者，則於取解脫。」</td>
     <td id='p9'>9. “Monk, if form doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. Thus, if feeling … conception … volition … awareness doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3b9'>時，彼比丘聞佛所説，心大歡喜。 禮佛而退。 獨在靜處，精勤修習，住不放逸。 精勤修習，住不放逸已，思惟： 「所以善男子出家，剃除鬚髮，身著法服，信家，非家，出家⋯乃至⋯ 『自知不受後有。』」</td>
+    <td class='ch' title='t99.2.3b9'>時，彼比丘聞佛所説，心大歡喜。 禮佛而退。 獨在靜處，精勤修習，住不放逸。 精勤修習，住不放逸已，思惟： 「所以善男子出家，剃除鬚髮，身著法服，信家，非家，出家⋯乃至⋯ 『自知不受後有。』」</td>
     <td id='p10'>10. When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He went alone to a quiet place where he diligently trained and lived earnestly. After diligently training and living earnestly, he thought, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘I myself know that I won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3b13'>時，彼比丘即成羅漢，心得解脱。</td>
+    <td class='ch' title='t99.2.3b13'>時，彼比丘即成羅漢，心得解脫。</td>
     <td id='p11'>11. That monk then became an <em>arhat</em>, and his mind was liberated.</td>
   </tr>
 </table>
@@ -72,15 +72,15 @@ next: SA1_22.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 15 in the <cite>Taisho</cite> edition and no. 21 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0003a06" target="_blank">T99.2.3a6-b13</a>). It and the next <em>sūtra</em> are parallel to <a href="https://suttacentral.net/sn22.36" target="_blank">SN 22.36</a> and share the same template as <a href="https://suttacentral.net/sn22.35" target="_blank">SN 22.35</a>. The differences between the C. and P. appear to revolve around the reading of Prakrit <em>anumīyati</em>. The Theravāda tradition reads it as an synonym of P. <em>saṅkha</em> (which can be a unit of measure). The present version instead reads it as equiv. to S. <em>anumṛyate</em> and also adds additional words to the passage in question. See the note below for more on these language issues. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>brings about the tendencies … brings about death</em>. C. 隨使使⋯隨使死, P. <em>anuseti … anumīyati</em>. This is one of the most difficult passages in SĀ. The exact meaning of 隨使使 is unclear. It could be a textual corruption, as it only occurs in this and the next <em>sūtra</em>. Nor can I find any evidence that 隨使 had an idiomatic meaning in C. Therefore, I’ve read the first 使 in its general C. meaning for causing something to happen, which is used in various personal and impersonal contexts. I take the second 使 as a translation S. <em>anuśaya</em>. Lit., it means something like “instigator,” but I translate it as “tendency” since Buddhists used <em>anuśaya</em> as a technical term for the afflictions when they are dormant but not yet eliminated. This makes 隨 either a coverb or adverb meaning “following” or “consequently.” Since this passage puts each of the five aggregates into the subject position, I’ve opted to read 者 as referring to “something” rather than “someone.”<br/>
-The lit. meaning of 隨使使者 then would be “something that consequently brings about the tendencies” or “something that follows the bringing about of the tendencies.” I’ve opted for the former reading because Buddhist texts commonly treat the aggregates and senses as the external stimuli that activate afflictions like desire or dislike. I’ve shortened that reading to “something that brings about the tendencies” for brevity.<br/>
-On the reading of the Pali equivalent to 隨使死 found in SN 22.36 (i.e., <em>anumīyati</em>), see Bodhi <cite>Connected Discourses</cite> Vol. I, 1053-4 n. 49. He says the Pali commentary reads the term as equivalent to S. <em>anumṛyate</em> (“follows in death”) and that the <em>anuśaya</em> cease when the aggregates do. Bodhi and other Pali translators don’t take this reading seriously, but it in fact agrees somewhat with the Chinese parallel here. The difference is that the C. gives us no indication that the aggregates bring about the death of the tendencies, as the Pali commentator claims. The straightforward reading of the C. passage is that the aggregates cause death (because they are impermanent), and therefore they are subject to grasping (for the same reason).<br/>
-The subtext of this passage seems to be that a person lives and dies as a result of their attachment to an impermanent existence. This in turn brings about the latent afflictions that trouble them while they are alive. However, if a person has no attachment to this impermanent existence, then impermanent things can’t trouble them. This would presumably describe an <em>arhat</em>. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 15 in the <cite>Taisho</cite> edition and no. 21 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0003a06" target="_blank">T99.2.3a6-b13</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0021a03" target="_blank">Y30.21a3-22a6</a>). It and the next <em>sūtra</em> are parallel to <a href="https://suttacentral.net/sn22.36" target="_blank">SN 22.36</a> and share the same template as <a href="https://suttacentral.net/sn22.35" target="_blank">SN 22.35</a>. The differences between the C. and P. appear to revolve around the reading of Prakrit <em>anumīyati</em>. The Theravāda tradition reads it as an synonym of P. <em>saṅkha</em> (which can be a unit of measure). The present version instead reads it as equiv. to S. <em>anumṛyate</em> and also adds additional words to the passage in question. See the note below for more on these language issues. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>brings about the tendencies … brings about death</em>. C. <span class="ch">隨使使⋯隨使死</span>, P. <em>anuseti … anumīyati</em>. This is one of the most difficult passages in SĀ. The exact meaning of <span class="ch">隨使使</span> is unclear. It could be a textual corruption, as it only occurs in this and the next <em>sūtra</em>. Nor can I find any evidence that <span class="ch">隨使</span> had an idiomatic meaning in C. Therefore, I’ve read the first <span class="ch">使</span> in its general C. meaning for causing something to happen, which is used in various personal and impersonal contexts. I take the second <span class="ch">使</span> as a translation S. <em>anuśaya</em>. Lit., it means something like “instigator,” but I translate it as “tendency” since Buddhists used <em>anuśaya</em> as a technical term for the afflictions when they are dormant but not yet eliminated. This makes <span class="ch">隨</span> either a coverb or adverb meaning “following” or “consequently.” Since this passage puts each of the five aggregates into the subject position, I’ve opted to read <span class="ch">者</span> as referring to “something” rather than “someone.”</p>
+<p>The lit. meaning of <span class="ch">隨使使者</span> then would be “something that consequently brings about the tendencies” or “something that follows the bringing about of the tendencies.” I’ve opted for the former reading because Buddhist texts commonly treat the aggregates and senses as the external stimuli that activate afflictions like desire or dislike. I’ve shortened that reading to “something that brings about the tendencies” for brevity.</p>
+<p>On the reading of the Pali equivalent to <span class="ch">隨使死</span> found in SN 22.36 (i.e., <em>anumīyati</em>), see Bodhi <cite>Connected Discourses</cite> Vol. I, 1053-4 n. 49. He says the Pali commentary reads the term as equivalent to S. <em>anumṛyate</em> (“follows in death”) and that the <em>anuśaya</em> cease when the aggregates do. Bodhi and other Pali translators don’t take this reading seriously, but it in fact agrees somewhat with the Chinese parallel here. The difference is that the C. gives us no indication that the aggregates bring about the death of the tendencies, as the Pali commentator claims. The straightforward reading of the C. passage is that the aggregates cause death (because they are impermanent), and therefore they are subject to grasping (for the same reason).</p>
+<p>The subtext of this passage seems to be that a person lives and dies as a result of their attachment to an impermanent existence. This in turn brings about the latent afflictions that trouble them while they are alive. However, if a person has no attachment to this impermanent existence, then impermanent things can’t trouble them. This would presumably describe an <em>arhat</em>. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 24 February 2024</p>
+<p class='revised'>Last Revised: 19 December 2023</p>
 
 <hr/>
