--- a/01_agama/samyukta/01/SA1_26.md
+++ b/01_agama/samyukta/01/SA1_26.md
@@ -14,7 +14,7 @@ next: SA1_27.html
   <th class='ch'>（二〇） 染</th>
   <th class='en'>26 (20). What Affects</th>
   <tr>
-    <td class="ch" title='t99.2.4b25'>深經亦如是說。</td>
+    <td class='ch' title='t99.2.4b25'>深經亦如是說。</td>
     <td id='p1'>1. A <em>sūtra</em> about being affected<sup id="ref1"><a href="#n1">1</a></sup> was taught in the same way [as the <a href="SA1_25.html" target="_blank">previous <em>sūtra</em></a>].</td>
   </tr>
 </table>
@@ -24,7 +24,7 @@ next: SA1_27.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 20 in the <cite>Taisho</cite> edition and no. 26 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004b25" target="_blank">T99.2.4b25</a>). It’s actually a variant note to the previous <em>sūtra</em> that was numbered in the <cite>Taisho</cite>. The <cite>Taisho</cite> here reads “a profound <em>sūtra</em>” (深經), but both Yinshun and CBETA amend this to “a <em>sūtra</em> about being affected” (染經), assuming that 深 is a typo for 染. If that’s true (and I don’t see any better suggestion to make sense of it), then this would have been a variant of the previous three <em>sūtra</em>s that substituted “something affecting” as the thing to get rid of. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 20 in the <cite>Taisho</cite> edition and no. 26 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004b25" target="_blank">T99.2.4b25</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0028a07" target="_blank">Y30.28a7-8</a>). It’s actually a variant note to the previous <em>sūtra</em> that was numbered in the <cite>Taisho</cite>. The <cite>Taisho</cite> here reads “a profound <em>sūtra</em>” (<span class="ch">深經</span>), but both Yinshun and CBETA amend this to “a <em>sūtra</em> about being affected” (<span class="ch">染經</span>), assuming that <span class="ch">深</span> is a typo for <span class="ch">染</span>. If that’s true (and I don’t see any better suggestion to make sense of it), then this would have been a variant of the previous three <em>sūtra</em>s that substituted “something affecting” as the thing to get rid of. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
