--- a/01_agama/samyukta/01/SA1_27.md
+++ b/01_agama/samyukta/01/SA1_27.md
@@ -14,43 +14,43 @@ next: SA1_28.html
   <th class='ch'>（二一） 動搖</th>
   <th class='en'>27 (21). Shaken</th>
   <tr>
-    <td class="ch" title='t99.2.4b26'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.4b26'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4b27'>爾時，有異比丘從坐起⋯為佛作禮⋯。 而白佛言： 「世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子⋯正信非家、出家⋯ 乃至⋯「自知不受後有。」』」</td>
+    <td class='ch' title='t99.2.4b27'>爾時，有異比丘從坐起⋯為佛作禮⋯。 而白佛言： 「世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子⋯正信非家、出家⋯ 乃至⋯「自知不受後有。」』」</td>
     <td id='p2'>2. There was then a certain monk who rose from his seat, [adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son [leaves home, cuts off his hair and beard, puts on the Dharma robes,] believes at home in being homeless, and leaves home … <em>up to</em> …‘“I myself know that I won’t be subject to a later existence.”’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c2'>爾時，世尊告彼比丘： 「善哉，善哉！汝今作是說： 『善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯ 乃至⋯「『自知不受後有』」』⋯耶？」</td>
+    <td class='ch' title='t99.2.4c2'>爾時，世尊告彼比丘： 「善哉，善哉！汝今作是說： 『善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯ 乃至⋯「『自知不受後有』」』⋯耶？」</td>
     <td id='p3'>3. The Bhagavān then told that monk, “Good! It’s good that you said, ‘It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ [Is this what you said?]”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c5'>比丘白佛言： 「如是，世尊。」</td>
+    <td class='ch' title='t99.2.4c5'>比丘白佛言： 「如是，世尊。」</td>
     <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c6'>佛告比丘： 「諦聽！諦聽，善思念之。 當為汝說。 比丘，動搖時則為魔所縛。 若不動者則解脫波旬。」</td>
+    <td class='ch' title='t99.2.4c6'>佛告比丘： 「諦聽！諦聽，善思念之。 當為汝說。 比丘，動搖時則為魔所縛。 若不動者則解脫波旬。」</td>
     <td id='p4'>4. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, when one is shaken, they are tied up by Māra. If one isn’t shaken, then they are free of Māra.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c8'>比丘白佛言： 「知已，世尊！ 知已，善逝！」</td>
+    <td class='ch' title='t99.2.4c8'>比丘白佛言： 「知已，世尊！ 知已，善逝！」</td>
     <td>That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c9'>佛告比丘： 「汝云何於我略說法中，廣解其義？」</td>
+    <td class='ch' title='t99.2.4c9'>佛告比丘： 「汝云何於我略說法中，廣解其義？」</td>
     <td id='p5'>5. The Buddha said to the monk, “How do you understand my brief explanation of the Dharma in full?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c10'>比丘白佛言： 「世尊，色動搖時則為魔所縛。 若不動者則解脫波旬。 如是，受⋯想⋯行⋯識動搖時則為魔所縛。 若不動者則解脫波旬。 是故，我於世尊略說法中廣解其義。」</td>
+    <td class='ch' title='t99.2.4c10'>比丘白佛言： 「世尊，色動搖時則為魔所縛。 若不動者則解脫波旬。 如是，受⋯想⋯行⋯識動搖時則為魔所縛。 若不動者則解脫波旬。 是故，我於世尊略說法中廣解其義。」</td>
     <td id='p6'>6. The monk said to the Buddha, “Bhagavān, when form shakes [a person], then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Thus, when feeling … conception … volition … awareness shakes them, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c14'>佛告比丘： 「善哉！善哉，汝於我略說法中廣解其義。 所以者何？ 若色動搖時則為魔所縛。 若不動者則解脫波旬。 如是，受⋯想⋯行⋯識動搖時則為魔所縛。 若不動者則解脫波旬。 」</td>
+    <td class='ch' title='t99.2.4c14'>佛告比丘： 「善哉！善哉，汝於我略說法中廣解其義。 所以者何？ 若色動搖時則為魔所縛。 若不動者則解脫波旬。 如是，受⋯想⋯行⋯識動搖時則為魔所縛。 若不動者則解脫波旬。 」</td>
     <td id='p7'>7. The Buddha said, “Good! It’s good that you understand the meaning of my brief explanation of the Dharma in full. Why is that? When form shakes a person, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Thus, when feeling … conception … volition … awareness shakes them, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.4c18'>⋯乃至⋯「『自知不受後有』」⋯ 心得解脫，成阿羅漢。</td>
+    <td class='ch' title='t99.2.4c18'>⋯乃至⋯「『自知不受後有』」⋯ 心得解脫，成阿羅漢。</td>
     <td id='p8'>8. … <em>Up to</em> … “‘I myself know that I won’t be subject to a later existence’” … His mind was liberated, and he became an <em>arhat</em>.”</td>
   </tr>
 </table>
@@ -60,8 +60,8 @@ next: SA1_28.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 21 in the <cite>Taisho</cite> edition and no. 27 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004b26" target="_blank">T99.2.4b26-c19</a>). It’s a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> follows the same template but includes a simile not found here. The previous four <em>sūtra</em>s (SĀ 1.23-26) substituted different principles for the monk to contemplate but otherwise employed the same template. See <a href="../01/SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>shaken</em>. C. 動搖. Like the English word “shaken,” 動搖 lit. means to “move, tremble, waver.” However, it’s very often used to refer to a person being disturbed, hesitant, or uncertain.   It can also mean to lose faith or confidence like “waver” often does in English. It’s not entirely clear to me which meaning is intended here, though I would assume that it’s psychological rather than literal. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 21 in the <cite>Taisho</cite> edition and no. 27 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004b26" target="_blank">T99.2.4b26-c19</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0028a09" target="_blank">Y30.28a9-29a5</a>). It’s a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> follows the same template but includes a simile not found here. The previous four <em>sūtra</em>s (SĀ 1.23-26) substituted different principles for the monk to contemplate but otherwise employed the same template. See <a href="../01/SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>shaken</em>. C. <span class="ch">動搖</span>. Like the English word “shaken,” <span class="ch">動搖</span> lit. means to “move, tremble, waver.” However, it’s very often used to refer to a person being disturbed, hesitant, or uncertain.   It can also mean to lose faith or confidence like “waver” often does in English. It’s not entirely clear to me which meaning is intended here, though I would assume that it’s psychological rather than literal. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
