--- a/01_agama/samyukta/01/SA1_30.md
+++ b/01_agama/samyukta/01/SA1_30.md
@@ -14,52 +14,52 @@ next: SA1_31.html
   <th class='ch'>（二四） 羅睺羅所問</th>
   <th class='en'>30 (24). Rāhula’s Question (2)</th>
   <tr>
-    <td class="ch" title='t99.2.5b5'>如是我聞： 一時，佛住王舍城、伽蘭陀竹園。</td>
+    <td class='ch' title='t99.2.5b5'>如是我聞： 一時，佛住王舍城、伽蘭陀竹園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b6'>爾時，世尊告羅睺羅： 「比丘，云何知、云何見我此識身及外境界一切相無有我、我所見、我慢使繫著？」</td>
+    <td class='ch' title='t99.2.5b6'>爾時，世尊告羅睺羅： 「比丘，云何知、云何見我此識身及外境界一切相無有我、我所見、我慢使繫著？」</td>
     <td id='p2'>2. It was then that the Bhagavān addressed Rāhula, “How does a monk know and how does he see this body of awareness and all the signs of the external world such that he has no binding attachments to views of self and what belongs to self or to the tendency of self pride?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b8'>羅睺羅白佛言： 「世尊為法主、為導、為覆。 善哉，世尊當為諸比丘演說此義！ 諸比丘從佛聞已，當受持、奉行。」</td>
+    <td class='ch' title='t99.2.5b8'>羅睺羅白佛言： 「世尊為法主、為導、為覆。 善哉，世尊當為諸比丘演說此義！ 諸比丘從佛聞已，當受持、奉行。」</td>
     <td>Rāhula said to the Buddha, “The Bhagavān is the Dharma lord, guide, and refuge.<sup id="ref2"><a href="#n2">2</a></sup> It would be good, Bhagavān, if you would give a detailed discourse on this subject for the monks! After they hear it, the monks will accept and approve of it.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b11'>佛告羅睺羅： 「諦聽！諦聽，善思念之。 當為汝說。」</td>
+    <td class='ch' title='t99.2.5b11'>佛告羅睺羅： 「諦聽！諦聽，善思念之。 當為汝說。」</td>
     <td id='p3'>3. The Buddha told Rāhula, “Listen closely! Listen closely, and consider it well. I will explain it for you.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b12'>羅睺羅白佛： 「唯然，受教。」</td>
+    <td class='ch' title='t99.2.5b12'>羅睺羅白佛： 「唯然，受教。」</td>
     <td>Rāhula said to the Buddha, “Very well, I’ll accept the teaching.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b12'>佛告羅睺羅： 「當觀諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。 如是平等慧如實觀。</td>
+    <td class='ch' title='t99.2.5b12'>佛告羅睺羅： 「當觀諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。 如是平等慧如實觀。</td>
     <td id='p4'>4. The Buddha told Rāhula, “You should observe that whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, distant or near, they are all not self, not different than self, and neither are present in the other. They are truly observed with equitable wisdom in this way.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b16'>「如是，受⋯想⋯行⋯識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。 如是平等慧如實觀。</td>
+    <td class='ch' title='t99.2.5b16'>「如是，受⋯想⋯行⋯識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。 如是平等慧如實觀。</td>
     <td id='p5'>5. “Thus, whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other. They are truly observed with equitable wisdom in this way.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b19'>「比丘如是知、如是見我此識身及外境界一切相無有我、我所見、我慢使繫著。</td>
+    <td class='ch' title='t99.2.5b19'>「比丘如是知、如是見我此識身及外境界一切相無有我、我所見、我慢使繫著。</td>
     <td id='p6'>6. “A monk who knows and sees this body of awareness and all the signs of the external world in this way will have no binding attachments to views of self and what belongs to self or to the tendency of self pride.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b21'>「羅睺羅，比丘如是識身及外境界一切相，無有我、我所見、我慢使繫著者，超越疑心，遠離諸相，寂靜解脫。 是名比丘斷除愛欲，轉去諸結。 正無間等，究竟苦邊。」</td>
+    <td class='ch' title='t99.2.5b21'>「羅睺羅，比丘如是識身及外境界一切相，無有我、我所見、我慢使繫著者，超越疑心，遠離諸相，寂靜解脫。 是名比丘斷除愛欲，轉去諸結。 正無間等，究竟苦邊。」</td>
     <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self pride regarding this body of awareness and all the signs of the external world, he goes beyond doubts, becomes free of these signs, and is peacefully liberated. That monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment, he reaches the final end of suffering.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b24'>時，羅睺羅聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.5b24'>時，羅睺羅聞佛所說歡喜，奉行。</td>
     <td id='p8'>8. When Rāhula heard what the Buddha taught, he rejoiced and approved.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.5b26'></td>
+  <td class='ch' title='t99.2.5b26'></td>
   <td class='subheading'>Summary Verse</td>
 </tr>
 <tr>
-  <td class="ch" title='t99.2.5b26'><ul class='verse'>
-    <li>使、增諸數、<br/>
+  <td title='t99.2.5b26'><ul class='verse'>
+    <li class='ch'>使、增諸數、<br/>
     非我、非彼、<br/>
     結繫、動搖、<br/>
     劫波所問、<br/>
@@ -82,13 +82,13 @@ next: SA1_31.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 24 in the <cite>Taisho</cite> edition and no. 30 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005b05" target="_blank">T99.2.5b5-27</a>). It’s nearly identical to the previous <em>sūtra</em> (<a href="SA1_29.html" target="_blank">SĀ 1.29</a>). The difference is that it occurs at a different location, and the Buddha here asks Rāhula the question rather than Rāhula bringing the question to the Buddha. As result, the two <em>sūtra</em>s appear to be different accounts of the same event. See the notes to SĀ 1.29 for more about other parallels that apply to both <em>sūtra</em>s. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>the Dharma lord, guide, and refuge</em>. C. 世尊為法主、為導、為覆. This triple epithet used to praise the Buddha as an authoritative source of the Dharma is found in many EBTs, but the translations in C. vary somewhat. This first occurrence of it in SĀ is unique to this <em>sūtra</em>. Elsewhere in SĀ, we find it a few more times translated instead as “the Bhagavān is the Dharma root, Dharma eye, and Dharma basis” (e.g. at T99.2.21a27: 世尊為法根、法眼、法依). In MĀ, the translation was “the Bhagavān is the Dharma source, the Bhagavān is the Dharma lord, and the Dharma comes from the Bhagavān” (e.g. at T26.1.424b5: 世尊為法本，世尊為法主，法由世尊).<br/>
-Turning to Pali parallels, we find the expression <em>bhagavaṁmūlakā no, bhante, dhammā bhagavaṁnettikā bhagavaṁpaṭisaraṇā</em> frequently in MN, SN, and AN (but not DN, interestingly). The three P. keywords are then <em>mūlaka</em> (“a root vegetable like the raddish, rooted in, springing from”), <em>nettika</em> (“a guide or forerunner”), and <em>paṭisaraṇa</em> (“shelter, help, protection”).<br/>
-It’s more than a little fascinating to see that the first version found here in this <em>sūtra</em> matches the Pali version much better than the others we find in other Sarvāstivāda sources. 導 = <em>netthika</em> and 覆 = <em>paṭisaraṇa</em> almost literally as the second the third epithets. On the other hand, the other two versions that we find in SĀ and MĀ do have parallels to <em>mūlaka</em> as the first epithet.<br/>
-Some of the confusion may derive from the fact that S. <em>netra</em> (= P. <em>netta</em>) can also mean “eye” as well as “guide.” This would explain SĀ’s second term changing from 導 to 眼. In S., <em>netrika</em> means “a conduit pipe for irrigation,” which is a reading for the P. as well. This is also what we see in the G. attestation <em>bhagavadanetriga</em> where G. <em>netriga</em> = P. <em>nettika</em>.<br/>
-However, G. <em>bhagavatanetiya</em> is also found in an EĀ fragment. It seems possible that the older Prakrit texts used a word like G. <em>nediga</em> (“leader”), which would be equiv. to P. <em>netika</em>. It’s much less ambiguous and could have been Sanskritized to S. <em>netrika</em> in error (when it should be S. <em>netṛka</em>). Perhaps the two Prakrit words (P. <em>netika</em> and <em>nettika</em>) became interchangable due to being nearly homophones. It’s easy to see from this example why Buddhists over time decided to standardize their canons in a single language like Sanskrit or Pali. The situation had become quite confusing.<br/>
-Finally, S. <em>pratisaraṇa</em> means “leaning or resting upon,” while <em>pratiśaraṇa</em> can mean “confidence in or to resort to.” This might explain the C. translation in SĀ changing from 覆 to 依. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 24 in the <cite>Taisho</cite> edition and no. 30 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005b05" target="_blank">T99.2.5b5-27</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0032a01" target="_blank">Y30.32a1-14</a>). It’s nearly identical to the previous <em>sūtra</em> (<a href="SA1_29.html" target="_blank">SĀ 1.29</a>). The difference is that it occurs at a different location, and the Buddha here asks Rāhula the question rather than Rāhula bringing the question to the Buddha. As result, the two <em>sūtra</em>s appear to be different accounts of the same event. See the notes to SĀ 1.29 for more about other parallels that apply to both <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>the Dharma lord, guide, and refuge</em>. C. <span class="ch">世尊為法主、為導、為覆</span>. This triple epithet used to praise the Buddha as an authoritative source of the Dharma is found in many EBTs, but the translations in C. vary somewhat. This first occurrence of it in SĀ is unique to this <em>sūtra</em>. Elsewhere in SĀ, we find it a few more times translated instead as “the Bhagavān is the Dharma root, Dharma eye, and Dharma basis” (e.g. at T99.2.21a27: <span class="ch">世尊為法根、法眼、法依</span>). In MĀ, the translation was “the Bhagavān is the Dharma source, the Bhagavān is the Dharma lord, and the Dharma comes from the Bhagavān” (e.g. at T26.1.424b5: <span class="ch">世尊為法本，世尊為法主，法由世尊</span>).</p>
+<p>Turning to Pali parallels, we find the expression <em>bhagavaṁmūlakā no, bhante, dhammā bhagavaṁnettikā bhagavaṁpaṭisaraṇā</em> frequently in MN, SN, and AN (but not DN, interestingly). The three P. keywords are then <em>mūlaka</em> (“a root vegetable like the raddish, rooted in, springing from”), <em>nettika</em> (“a guide or forerunner”), and <em>paṭisaraṇa</em> (“shelter, help, protection”).</p>
+<p>It’s more than a little fascinating to see that the first version found here in this <em>sūtra</em> matches the Pali version much better than the others we find in other Sarvāstivāda sources. <span class="ch">導</span> = <em>netthika</em> and <span class="ch">覆</span> = <em>paṭisaraṇa</em> almost literally as the second the third epithets. On the other hand, the other two versions that we find in SĀ and MĀ do have parallels to <em>mūlaka</em> as the first epithet.</p>
+<p>Some of the confusion may derive from the fact that S. <em>netra</em> (= P. <em>netta</em>) can also mean “eye” as well as “guide.” This would explain SĀ’s second term changing from <span class="ch">導</span> to <span class="ch">眼</span>. In S., <em>netrika</em> means “a conduit pipe for irrigation,” which is a reading for the P. as well. This is also what we see in the G. attestation <em>bhagavadanetriga</em> where G. <em>netriga</em> = P. <em>nettika</em>.</p>
+<p>However, G. <em>bhagavatanetiya</em> is also found in an EĀ fragment. It seems possible that the older Prakrit texts used a word like G. <em>nediga</em> (“leader”), which would be equiv. to P. <em>netika</em>. It’s much less ambiguous and could have been Sanskritized to S. <em>netrika</em> in error (when it should be S. <em>netṛka</em>). Perhaps the two Prakrit words (P. <em>netika</em> and <em>nettika</em>) became interchangable due to being nearly homophones. It’s easy to see from this example why Buddhists over time decided to standardize their canons in a single language like Sanskrit or Pali. The situation had become quite confusing.</p>
+<p>Finally, S. <em>pratisaraṇa</em> means “leaning or resting upon,” while <em>pratiśaraṇa</em> can mean “confidence in or to resort to.” This might explain the C. translation in SĀ changing from <span class="ch">覆</span> to <span class="ch">依</span>. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
