--- a/01_agama/samyukta/01/SA1_35.md
+++ b/01_agama/samyukta/01/SA1_35.md
@@ -14,36 +14,36 @@ next: SA1_36.html
   <th class='ch'>（二九） 三蜜離提問</th>
   <th class='en'>35 (29). Samṛddhi’s Question</th>
   <tr>
-    <td class="ch" title='t99.2.6a12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.6a12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a13'>爾時，有異比丘名三蜜離提，來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊說『說法師』，云何名為說法師？」</td>
+    <td class='ch' title='t99.2.6a13'>爾時，有異比丘名三蜜離提，來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊說『說法師』。 云何名為說法師？」</td>
     <td id='p2'>2. There was then a certain monk named Samṛddhi who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “The Bhagavān says ‘the teaching of a Dharma teacher.’ What’s called the teaching of a Dharma teacher?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a15'>佛告比丘： 「汝今欲知說法師義耶？」</td>
+    <td class='ch' title='t99.2.6a15'>佛告比丘： 「汝今欲知說法師義耶？」</td>
     <td id='p3'>3. The Buddha said to the monk, “[Good, good!] Do you want now to know the meaning of ‘the teaching of a Dharma teacher’?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a16'>比丘白佛： 「唯然，世尊！」</td>
+    <td class='ch' title='t99.2.6a16'>比丘白佛： 「唯然，世尊！」</td>
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a17'>佛告比丘： 「諦聽，善思。 當為汝說。 若比丘於色說厭、離欲、滅盡，是名說法師。 如是於受、想、行、識，於識說厭、離欲、滅盡。 是名說法師。」</td>
+    <td class='ch' title='t99.2.6a17'>佛告比丘： 「諦聽，善思。 當為汝說。 若比丘於色說厭、離欲、滅盡，是名說法師。 如是於受、想、行、識，於識說厭、離欲、滅盡。 是名說法師。」</td>
     <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain this for you. If a monk teaches disillusionment with form, being free of desire for it, and completely ceasing it, this is called the teaching of a Dharma teacher. <em>It’s the same with feeling, conception, volition, and awareness</em> … he teaches disillusionment with awareness, being free of desire for it, and completely ceasing it. This is called the teaching of a Dharma teacher.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a20'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
+    <td class='ch' title='t99.2.6a20'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.6a22'></td>
+  <td class='ch' title='t99.2.6a22'></td>
   <td class='subheading'>Summary Verse</td>
 </tr>
 <tr>
-  <td class="ch" title='t99.2.6a22'><ul class='verse'>
-    <li>多聞、善說法、<br/>
+  <td title='t99.2.6a22'><ul class='verse'>
+    <li class='ch'>多聞、善說法、<br/>
     向法、及涅槃、<br/>
     三蜜離提問、<br/>
     『云何說法師』。</li>
@@ -62,7 +62,7 @@ next: SA1_36.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 29 in the <cite>Taisho</cite> edition and no. 35 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0006a12" target="_blank">T99.2.6a12-23</a>). It and the previous four <em>sūtra</em> are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. In this case, however, that monk is not actually anonymous, being named Samṛddhi. All five of these <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 29 in the <cite>Taisho</cite> edition and no. 35 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0006a12" target="_blank">T99.2.6a12-23</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0037a01" target="_blank">Y30.37a1-7</a>). It and the previous four <em>sūtra</em> are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29</a>-<a href="SA1_30.html" target="_blank">30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. In this case, however, that monk is not actually anonymous, being named Samṛddhi. All five of these <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115</a>-<a href="https://suttacentral.net/sn22.116" target="_blank">116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
