--- a/01_agama/samyukta/01/SA1_9.md
+++ b/01_agama/samyukta/01/SA1_9.md
@@ -14,19 +14,19 @@ next: SA1_10.html
   <th class='ch'>（六） 不知</th>
   <th class='en'>9 (6). Not Knowing (4)</th>
   <tr>
-    <td class="ch" title='t99.2.1c2'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.1c2'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.1c3'>爾時，世尊告諸比丘： 「於色不知不明，不離欲貪，心不解脫者則不能越生、老、病、死怖。 如是，受⋯想⋯行⋯識不知不明，不離欲貪，心不解脫者則不能越生、老、病、死怖。</td>
+    <td class='ch' title='t99.2.1c3'>爾時，世尊告諸比丘： 「於色不知不明，不離欲貪，心不解脫者則不能越生、老、病、死怖。 如是，受⋯想⋯行⋯識不知不明，不離欲貪，心不解脫者則不能越生、老、病、死怖。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death. Thus, when one doesn’t know or understand feeling … conception … volition … awareness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.1c6'>「諸比丘，於色若知若明，若離欲貪，心解脫者則能越生、老、病、死怖。 如是，受⋯想⋯行⋯識：若知若明，若離欲貪，心解脫者則能越生、老、病、死怖。」</td>
+    <td class='ch' title='t99.2.1c6'>「諸比丘，於色若知若明，若離欲貪，心解脫者則能越生、老、病、死怖。 如是，受⋯想⋯行⋯識：若知若明，若離欲貪，心解脫者則能越生、老、病、死怖。」</td>
     <td id='p3'>3. “Monks, if someone knows and understands form and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death. Thus, if someone knows and understands feeling … conception … volition … awareness and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.1c10'>時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.1c10'>時，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,11 +36,11 @@ next: SA1_10.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 6 in the <cite>Taisho</cite> edition and no. 9 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001c02" target="_blank">T99.2.1c2-10</a>). It’s a variant of the previous three <em>sūtra</em>s. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is parallel with <a href="../02/SA2_9.html" target="_blank">SĀ 2.9</a>. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 6 in the <cite>Taisho</cite> edition and no. 9 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001c02" target="_blank">T99.2.1c2-10</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0007a11" target="_blank">Y30.7a11-8a1</a>). It’s a variant of the previous three <em>sūtra</em>s. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is parallel with <a href="../02/SA2_9.html" target="_blank">SĀ 2.9</a>. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 23 February 2024</p>
+<p class='revised'>Last Revised: 10 December 2023</p>
 
 <hr/>
