--- a/01_agama/samyukta/01/SA1_15.md
+++ b/01_agama/samyukta/01/SA1_15.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 15 (9). Teaching Disillusionment'
+title: 'The Related Discourses | 1. The Aggregates | 15 (9). Disillusionment'
 type: kramdown
 base: ../../../
 previous: SA1_11-14.html
@@ -14,19 +14,19 @@ next: SA1_16.html
   <th class='ch'>（九） 厭離</th>
   <th class='en'>15 (9). Disillusionment</th>
   <tr>
-    <td class="ch" title='t99.2.2a2'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.2a2'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2a3'>爾時，世尊告諸比丘： 「色無常。 無常即苦，苦即非我，非我者亦非我所。 如是觀者名真實正觀。 如是，受⋯想⋯行⋯識無常。 無常即苦，苦即非我，非我者亦非我所。 如是觀者名真實觀。</td>
+    <td class='ch' title='t99.2.2a3'>爾時，世尊告諸比丘： 「色無常。 無常即苦，苦即非我，非我者亦非我所。 如是觀者名真實正觀。 如是，受⋯想⋯行⋯識無常。 無常即苦，苦即非我，非我者亦非我所。 如是觀者名真實觀。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called true and correct observation.<sup id="ref2"><a href="#n2">2</a></sup> Thus, feeling … conception … volition … awareness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called a true observation.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2a7'>「聖弟子如是觀者厭於色⋯ 厭受⋯想⋯行⋯識。 厭故不樂。 不樂故得解脫。 解脫者真實智生： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
+    <td class='ch' title='t99.2.2a7'>「聖弟子如是觀者厭於色⋯ 厭受⋯想⋯行⋯識。 厭故不樂。 不樂故得解脫。 解脫者真實智生： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
     <td id='p3'>3. “Noble disciples who observe it in this way become disillusioned with form … become disillusioned with sensation … conception … volition … awareness. Because they’re disillusioned, they don’t enjoy them. Because they don’t enjoy them, they attain liberation. This true knowledge arises in someone who is liberated: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2a10'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td class='ch' title='t99.2.2a10'>時，諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,13 +36,13 @@ next: SA1_16.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 9 in the <cite>Taisho</cite> edition and no. 15 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002a02" target="_blank">T99.2.2a2-11</a>). It’s parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16-17</a>. SN 22.15-17 are variants that differ in where they begin in the argument that conditioned things are impermanent, their impermanence is painful, and painful things are not self and don’t belong to a self. I.e., SN 22.15 lists the full set of logical steps, SN 22.16 skips the first step, and SN 22.17 skips the first two steps.<br/>
-Here, SĀ 1.15-16 don’t abbreviate the logical argument for conditioned things not being self. Rather, they use two equivalent ways of expressing a noble disciple’s liberation from the aggregates. Thus, all five <em>sūtra</em>s (SN 22.15-17 and SĀ 1.15-16) could be regarding as part of a larger set of variants. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>true and correct observation.</em> C. 真實正觀, P. <em>yathābhūtaṁ sammappaññāya</em>. When this expression reoccurs both here in this <em>sūtra</em> and the next, 正 (“correct”) is omitted. I’ve preserved the C. readings as they are. It seems equally likely to me that the expression has been abbreviated after the first occurrence or that 正 has been inserted in this one passage. The Pali parallel supports the former possibility. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 9 in the <cite>Taisho</cite> edition and no. 15 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002a02" target="_blank">T99.2.2a2-11</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0013a07" target="_blank">Y30.13a7-12</a>). It’s parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16</a>-<a href="https://suttacentral.net/sn22.17" target="_blank">17</a>. SN 22.15-17 are variants that differ in where they begin in the argument that conditioned things are impermanent, their impermanence is painful, and painful things are not self and don’t belong to a self. I.e., SN 22.15 lists the full set of logical steps, SN 22.16 skips the first step, and SN 22.17 skips the first two steps.</p>
+<p>Here, SĀ 1.15-16 don’t abbreviate the logical argument for conditioned things not being self. Rather, they use two equivalent ways of expressing a noble disciple’s liberation from the aggregates. Thus, all five <em>sūtra</em>s (SN 22.15-17 and SĀ 1.15-16) could be regarding as part of a larger set of variants. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>true and correct observation.</em> C. <span class="ch">真實正觀</span>, P. <em>yathābhūtaṁ sammappaññāya</em>. When this expression reoccurs both here in this <em>sūtra</em> and the next, <span class="ch">正</span> (“correct”) is omitted. I’ve preserved the C. readings as they are. It seems equally likely to me that the expression has been abbreviated after the first occurrence or that <span class="ch">正</span> has been inserted in this one passage. The Pali parallel supports the former possibility. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 23 February 2024</p>
+<p class='revised'>Last Revised: 19 December 2023</p>
 
 <hr/>
