--- a/01_agama/samyukta/01/SA1_16.md
+++ b/01_agama/samyukta/01/SA1_16.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 16 (10). Teaching Liberation'
+title: 'The Related Discourses | 1. The Aggregates | 16 (10). Liberation'
 type: kramdown
 base: ../../../
 previous: SA1_15.html
@@ -11,22 +11,22 @@ next: SA1_17.html
 <h2><a href='index.html'>1. The Aggregates</a></h2>
 
 <table class="trans">
-  <th class='ch'>（一〇） 解脱</th>
+  <th class='ch'>（一〇） 解脫</th>
   <th class='en'>16 (10). Liberation</th>
   <tr>
-    <td class="ch" title='t99.2.2a12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.2a12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2a13'>爾時，世尊告諸比丘： 「色無常。 無常即苦，苦即非我，非我者即非我所。 如是觀者名真實觀。 如是，受⋯想⋯行⋯識無常，無常即苦，苦即非我，非我者即非我所。 如是觀者名真實觀。</td>
+    <td class='ch' title='t99.2.2a13'>爾時，世尊告諸比丘： 「色無常。 無常即苦，苦即非我，非我者即非我所。 如是觀者名真實觀。 如是，受⋯想⋯行⋯識無常，無常即苦，苦即非我，非我者即非我所。 如是觀者名真實觀。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called a true observation. Thus, feeling … conception … volition … awareness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called true observation.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2a17'>「聖弟子如是觀者於色解脫⋯ 於受⋯想⋯行⋯識解脫。 我說是等解脫於生、老、病、死、憂、悲、苦、惱。」</td>
+    <td class='ch' title='t99.2.2a17'>「聖弟子如是觀者於色解脫⋯ 於受⋯想⋯行⋯識解脫。 我說是等解脫於生、老、病、死、憂、悲、苦、惱。」</td>
     <td id='p3'>3. “Noble disciples who observe it in this way are liberated from form … liberated from sensation … conception … volition … awareness. I say that this is liberation<sup id="ref2"><a href="#n2">2</a></sup> from birth, old age, illness, death, grief, sorrow, pain, and trouble.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2a19'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td class='ch' title='t99.2.2a19'>時，諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,12 +36,12 @@ next: SA1_17.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 10 in the <cite>Taisho</cite> edition and no. 16 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002a12" target="_blank">T99.2.2a12-20</a>). It’s a variant of the previous one (<a href="SA1_15.html" target="_blank">SĀ 1.15</a>), and both are parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16-17</a>. See the notes to <a href="SA1_15.html" target="_blank">SĀ 1.15</a> for more discussion of these parallels. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>this is liberation</em>. C. 是等解脫. The parallel passage in <a href="SA1_18.html" target="_blank">SĀ 1.18</a> reads 是等<strong>為</strong>解脫, which makes a bit more sense than 等解脫. It means that liberation from the five aggregates (是等, “these things”) is liberation from suffering. As the <cite>Taisho</cite> reads here, I would take 等解脫 to mean “complete” or “thorough liberation” (S. *<em>sama</em> or <em>sam-</em> + <em>(vi)mokṣa</em>?). But I think this is a case of inattentive copying leading to minor omissions. In this case, 為 was lost. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 10 in the <cite>Taisho</cite> edition and no. 16 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002a12" target="_blank">T99.2.2a12-20</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0013a13" target="_blank">Y30.13a13-14a2</a>). It’s a variant of the previous one (<a href="SA1_15.html" target="_blank">SĀ 1.15</a>), and both are parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16</a>-<a href="https://suttacentral.net/sn22.17" target="_blank">17</a>. See the notes to <a href="SA1_15.html" target="_blank">SĀ 1.15</a> for more discussion of these parallels. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>this is liberation</em>. C. <span class="ch">是等解脫</span>. The parallel passage in <a href="SA1_18.html" target="_blank">SĀ 1.18</a> reads <span class="ch">是等<strong>為</strong>解脫</span>, which makes a bit more sense than <span class="ch">等解脫</span>. It means that liberation from the five aggregates (<span class="ch">是等</span>, “these things”) is liberation from suffering. As the <cite>Taisho</cite> reads here, I would take <span class="ch">等解脫</span> to mean “complete” or “thorough liberation” (S. *<em>sama</em> or <em>sam-</em> + <em>(vi)mokṣa</em>?). But I think this is a case of inattentive copying leading to minor omissions. In this case, <span class="ch">為</span> was lost. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 23 February 2024</p>
+<p class='revised'>Last Revised: 19 December 2023</p>
 
 <hr/>
