--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -14,41 +14,41 @@ next: SA1_21.html
   <th class='ch'>(一四) 味</th>
   <th class='en'>20 (14). Enjoyment (2)</th>
   <tr>
-    <td class="ch" title='t99.2.2c11'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.2c11'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2c12'>爾時，世尊告諸比丘： 「我昔於色味有求，有行。 若於色味隨順覺，則於色味以智慧如實見。 如是，於受⋯想⋯行⋯識味有求，有行。 若於受⋯想⋯行⋯識味隨順覺，則於識味以智慧如實見。</td>
+    <td class='ch' title='t99.2.2c12'>爾時，世尊告諸比丘： 「我昔於色味有求，有行。 若於色味隨順覺，則於色味以智慧如實見。 如是，於受⋯想⋯行⋯識味有求，有行。 若於受⋯想⋯行⋯識味隨順覺，則於識味以智慧如實見。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “In the past, I had pursued and practiced the enjoyment of form. When I realized the enjoyment of form as a result,<sup id="ref2"><a href="#n2">2</a></sup> I truly saw it with wisdom. Thus, I had pursued and practiced the enjoyment of feeling … conception … volition … awareness. When I realized the enjoyment of feeling … conception … volition … awareness as a result, I truly saw it with wisdom.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2c16'>「諸比丘，我於色患有求，有行。 若於色患隨順覺，則於色患以智慧如實見。 如是，受⋯想⋯行⋯識患有求，有行。 若於識患隨順覺，則於識患以智慧如實見。</td>
+    <td class='ch' title='t99.2.2c16'>「諸比丘，我於色患有求，有行。 若於色患隨順覺，則於色患以智慧如實見。 如是，受⋯想⋯行⋯識患有求，有行。 若於識患隨順覺，則於識患以智慧如實見。</td>
     <td id='p3'>3. “Monks, I pursued and practiced the trouble of form. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I pursued and practiced the trouble of feeling … conception … volition … awareness. When I realized the trouble of awareness as a result, I truly saw it with wisdom.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2c19'>「諸比丘，我於色離有求，有行。 若於色隨順覺，則於色離以智慧如實見。 如是，受⋯想⋯行⋯識離有求，有行。 若於受⋯想⋯行⋯識離隨順覺，則於受⋯想⋯行⋯識離以智慧如實見。</td>
+    <td class='ch' title='t99.2.2c19'>「諸比丘，我於色離有求，有行。 若於色隨順覺，則於色離以智慧如實見。 如是，受⋯想⋯行⋯識離有求，有行。 若於受⋯想⋯行⋯識離隨順覺，則於受⋯想⋯行⋯識離以智慧如實見。</td>
     <td id='p4'>4. “Monks, I pursued and practiced the escape from form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I pursued and practiced the escape from feeling … conception … volition … awareness. When I realized the escape from awareness as a result, I truly saw it with wisdom.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2c23'>「諸比丘，我於五受陰不如實知味是味⋯患是患⋯離是離者， 我於諸天，若魔若梵，沙門婆羅門，天人衆中不脱，不離，不出，永住顛倒，不能自證得阿耨多羅三藐三菩提。</td>
+    <td class='ch' title='t99.2.2c23'>「諸比丘，我於五受陰不如實知味是味⋯患是患⋯離是離者， 我於諸天，若魔若梵，沙門婆羅門，天人眾中不脫，不離，不出，永住顛倒，不能自證得阿耨多羅三藐三菩提。</td>
     <td id='p5'>5. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed, escaped, and parted with them. I would have forever stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.2c27'>「諸比丘，我以如實知五受陰味是味⋯患是患⋯離是離，我於諸天人若魔、若梵、沙門、婆羅門、天人衆中以脱，以離，以出，永不住顛倒。 能自證得阿耨多羅三藐三菩提。</td>
+    <td class='ch' title='t99.2.2c27'>「諸比丘，我以如實知五受陰味是味⋯患是患⋯離是離，我於諸天人若魔、若梵、沙門、婆羅門、天人眾中以脫，以離，以出，永不住顛倒。 能自證得阿耨多羅三藐三菩提。</td>
     <td id='p6'>6. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed, escaped, parted, and liberated from bondage. I never again stood in delusion among gods like Māra or Brahmā, ascetics and priests, or the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a2'>時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td class='ch' title='t99.2.3a2'>時，諸比丘聞佛所説歡喜，奉行。</td>
     <td id='p7'>7. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.3a4'></td>
+  <td class='ch' title='t99.2.3a4'></td>
   <td class='subheading'>Summary Verse</td>
 </tr>
 <tr>
-  <td class="ch" title='t99.2.3a4'><ul class='verse'>
-    <li>過去四種説，<br/>
-    厭離及解脱，<br/>
+  <td title='t99.2.3a4'><ul class='verse'>
+    <li class='ch'>過去四種説，<br/>
+    厭離及解脫，<br/>
     二種説因縁，<br/>
     味亦復二種。</li>
   </ul></td>
@@ -66,12 +66,12 @@ next: SA1_21.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 14 in the <cite>Taisho</cite> edition and no. 20 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002c11" target="_blank">T99.2.2c11-3a5</a>). It’s a variant of the previous one (<a href="SA1_19.html" target="_blank">SĀ 1.19</a>). Both correspond to <a href="https://suttacentral.net/sn22.26" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27" target="_blank">SN 22.27</a>. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>realized … as a result</em>. C. 隨順覺. The parallel word in SN 22.27 is P. <em>tadajjhagama</em> (“found that”), which combines a relative pronoun with a form of P. <em>adhigacchati</em>. The C. appears to translate a different word in Prakrit that meant something like “consequently realized.” Of course, “realized” in the sense of discovering something is similar to the meaning of “found” that P. <em>adhigacchati</em> can have. I wonder if the Prakrit here might have been equiv. to <em>anugacchati</em>. It would explain the prefix 隨順, which often translated <em>anu-</em> in Indic words. While S. <em>gacchati</em> has meanings like the P. word (“to go, obtain, pass away”), it can also mean “to understand” or “perceive,” which matches 覺 much better than P. <em>adhigacchati</em>. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 14 in the <cite>Taisho</cite> edition and no. 20 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002c11" target="_blank">T99.2.2c11-3a5</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0017a15" target="_blank">Y30.17a15-18a12</a>). It’s a variant of the previous one (<a href="SA1_19.html" target="_blank">SĀ 1.19</a>). Both correspond to <a href="https://suttacentral.net/sn22.26" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27" target="_blank">SN 22.27</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>realized … as a result</em>. C. <span class="ch">隨順覺</span>. The parallel word in SN 22.27 is P. <em>tadajjhagama</em> (“found that”), which combines a relative pronoun with a form of P. <em>adhigacchati</em>. The C. appears to translate a different word in Prakrit that meant something like “consequently realized.” Of course, “realized” in the sense of discovering something is similar to the meaning of “found” that P. <em>adhigacchati</em> can have. I wonder if the Prakrit here might have been equiv. to <em>anugacchati</em>. It would explain the prefix <span class="ch">隨順</span>, which often translated <em>anu-</em> in Indic words. While S. <em>gacchati</em> has meanings like the P. word (“to go, obtain, pass away”), it can also mean “to understand” or “perceive,” which matches <span class="ch">覺</span> much better than P. <em>adhigacchati</em>. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 24 February 2024</p>
+<p class='revised'>Last Revised: 19 December 2023</p>
 
 <hr/>
