--- a/01_agama/samyukta/01/SA1_31.md
+++ b/01_agama/samyukta/01/SA1_31.md
@@ -14,27 +14,27 @@ next: SA1_32.html
   <th class='ch'>（二五） 多聞</th>
   <th class='en'>31 (25). Well Versed</th>
   <tr>
-    <td class="ch" title='t99.2.5b28'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.5b28'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5b29'>時，有異比丘來詣佛所。 為佛作禮，却住一面。 白佛言： 「如世尊說『多聞』，云何為多聞？」</td>
+    <td class='ch' title='t99.2.5b29'>時，有異比丘來詣佛所。 為佛作禮，却住一面。 白佛言： 「如世尊說『多聞』。 云何為多聞？」</td>
     <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “The Bhagavān says ‘well versed.’ How is one well versed?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c2'>佛告比丘： 「善哉，善哉！汝今問我多聞義耶？」</td>
+    <td class='ch' title='t99.2.5c2'>佛告比丘： 「善哉，善哉！汝今問我多聞義耶？」</td>
     <td id='p3'>3. The Buddha said to that monk, “Good, good! Are you asking me now about the meaning of ‘well versed’?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c3'>比丘白佛： 「唯然，世尊！」</td>
+    <td class='ch' title='t99.2.5c3'>比丘白佛： 「唯然，世尊！」</td>
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c3'>佛告比丘： 「諦聽，善思。 當為汝說。 比丘，當知，若聞色是生厭、離欲、滅盡、寂靜法，是名多聞。 如是，聞受⋯想⋯行⋯識是生厭、離欲、滅盡、寂靜法，是名多聞。 比丘，是名如來所說多聞。」</td>
+    <td class='ch' title='t99.2.5c3'>佛告比丘： 「諦聽，善思。 當為汝說。 比丘，當知，若聞色是生厭、離欲、滅盡、寂靜法，是名多聞。 如是，聞受⋯想⋯行⋯識是生厭、離欲、滅盡、寂靜法，是名多聞。 比丘，是名如來所說多聞。」</td>
     <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain it for you. Monk, you should know that if one learns about becoming disillusioned with form, becoming free of desire for it, completely ceasing it, and the principle of peace,<sup id="ref2"><a href="#n2">2</a></sup> this is called being well versed. Thus, if one learns about becoming disillusioned with feeling … conception … volition … awareness, becoming free of desire for it, completely ceasing it, and the principle of peace, this is called being well versed. Monk, this is what the Tathāgata says is being well versed.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c7'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
+    <td class='ch' title='t99.2.5c7'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. Then, he bowed and departed.</td>
   </tr>
 </table>
@@ -44,9 +44,9 @@ next: SA1_32.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 25 in the <cite>Taisho</cite> edition and no. 31 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005b28" target="_blank">T99.2.5b28-c8</a>). It and the next four <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>learns about … principle of peace</em>. C. 聞. Lit. “hears about.” Education in ancient India was conducted orally prior to the widespread adoption of writing, and even then oral recitation and memorization continued as a basic way of learning for a long time. Thus, “hearing about” something could mean being learned in the subject, as it does here. The expression 多聞 (P. <em>bahussuta</em>, S. <em>bahuśruta</em>), which lit. means “heard much” but functions as “very learned,” signals this context for us.<br/>
-The three steps of disillusionment with, becoming free of desire for, and complete cessation of the aggregates is the common definition (or process) of being liberated from them. A fourth item is added here, the “principle of peace” (寂靜法). It’s not entirely clear to me what this expression means exactly, as it only occurs here and in the next <em>sūtra</em> in SĀ without any further comment about it. In other C. translations, it sometimes meant the teaching of peace that leads to <em>nirvāṇa</em>, which certainly fits the context here (cf. T721.17.283a8: 爾時，彼處彌勒世尊說寂靜法向涅槃城⋯). Different fourth items are added in the other <em>sūtra</em>s; these apparent additions aren’t found in SN 22.115-116. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 25 in the <cite>Taisho</cite> edition and no. 31 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005b28" target="_blank">T99.2.5b28-c8</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0035a04" target="_blank">Y30.35a4-9</a>). It and the next four <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>learns about … principle of peace</em>. C. <span class="ch">聞</span>. Lit. “hears about.” Education in ancient India was conducted orally prior to the widespread adoption of writing, and even then oral recitation and memorization continued as a basic way of learning for a long time. Thus, “hearing about” something could mean being learned in the subject, as it does here. The expression <span class="ch">多聞</span> (P. <em>bahussuta</em>, S. <em>bahuśruta</em>), which lit. means “heard much” but functions as “very learned,” signals this context for us.</p>
+<p>The three steps of disillusionment with, becoming free of desire for, and complete cessation of the aggregates is the common definition (or process) of being liberated from them. A fourth item is added here, the “principle of peace” (<span class="ch">寂靜法</span>). It’s not entirely clear to me what this expression means exactly, as it only occurs here and in the next <em>sūtra</em> in SĀ without any further comment about it. In other C. translations, it sometimes meant the teaching of peace that leads to <em>nirvāṇa</em>, which certainly fits the context here (cf. T721.17.283a8: <span class="ch">爾時，彼處彌勒世尊說寂靜法向涅槃城⋯</span>). Different fourth items are added in the other <em>sūtra</em>s; these apparent additions aren’t found in SN 22.115-116. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
