--- a/01_agama/samyukta/01/SA1_32.md
+++ b/01_agama/samyukta/01/SA1_32.md
@@ -14,31 +14,31 @@ next: SA1_33.html
   <th class='ch'>（二六） 善說法</th>
   <th class='en'>32 (26). The Well Taught Dharma</th>
   <tr>
-    <td class="ch" title='t99.2.5c9'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.5c9'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c10'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊所說『法師』，云何名為法師？」</td>
+    <td class='ch' title='t99.2.5c10'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊所說『法師』。 云何名為法師？」</td>
     <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “The Bhagavān says ‘Dharma teacher.’ What is a Dharma teacher?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c12'>佛告比丘： 「善哉，善哉！汝今欲知如來所說法師義耶？」</td>
+    <td class='ch' title='t99.2.5c12'>佛告比丘： 「善哉，善哉！汝今欲知如來所說法師義耶？」</td>
     <td id='p3'>3. The Buddha asked that monk, “Good, good! Do you want now to know about the meaning of what the Tathāgata says is a ‘Dharma teacher’?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c13'>比丘白佛： 「唯然，世尊。」</td>
+    <td class='ch' title='t99.2.5c13'>比丘白佛： 「唯然，世尊。」</td>
     <td>That monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c14'>佛告比丘： 「諦聽，善思。 當為汝說。」</td>
+    <td class='ch' title='t99.2.5c14'>佛告比丘： 「諦聽，善思。 當為汝說。」</td>
     <td>The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain it for you.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c14'>佛告比丘： 「若於色說是生厭、離欲、滅盡、寂靜法者，是名法師。 若於受⋯想⋯行⋯識說是生厭、離欲、滅盡、寂靜法者，是名法師。 是名如來所說法師。」</td>
+    <td class='ch' title='t99.2.5c14'>佛告比丘： 「若於色說是生厭、離欲、滅盡、寂靜法者，是名法師。 若於受⋯想⋯行⋯識說是生厭、離欲、滅盡、寂靜法者，是名法師。 是名如來所說法師。」</td>
     <td id='p4'>4. The Buddha told the monk, “If someone teaches about becoming disillusioned with form, becoming free of desire for it, completely ceasing it, and the principle of peace, they are called a Dharma teacher. If they teach about becoming disillusioned with feeling … conception … volition … awareness, becoming free of desire for it, completely ceasing it, and the principle of peace, they are called a Dharma teacher. This is what the Tathāgata calls a Dharma teacher.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c18'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
+    <td class='ch' title='t99.2.5c18'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 </table>
@@ -48,7 +48,7 @@ next: SA1_33.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 26 in the <cite>Taisho</cite> edition and no. 32 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005c09" target="_blank">T99.2.5c9-19</a>). It, the previous, and the next three <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. See the notes to <a href="SA1_31.html#n2" target="_blank">SĀ 1.31</a> for more about the definition of the Dharma teacher found below. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 26 in the <cite>Taisho</cite> edition and no. 32 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005c09" target="_blank">T99.2.5c9-19</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0035a10" target="_blank">Y30.35a10-36a2</a>). It, the previous, and the next three <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29</a>-<a href="SA1_30.html" target="_blank">30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115</a>-<a href="https://suttacentral.net/sn22.116" target="_blank">116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same rubric of liberation from desire for the five aggregates. See the notes to <a href="SA1_31.html#n2" target="_blank">SĀ 1.31</a> for more about the definition of the Dharma teacher found below. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
