--- a/01_agama/samyukta/01/SA1_33.md
+++ b/01_agama/samyukta/01/SA1_33.md
@@ -14,27 +14,27 @@ next: SA1_34.html
   <th class='ch'>（二七） 法次法向</th>
   <th class='en'>33 (27). Going from One Principle to the Next</th>
   <tr>
-    <td class="ch" title='t99.2.5c20'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.5c20'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c21'>爾時，有異比丘來詣佛所。 頭面作禮，却住一面。 白佛言： 「如世尊說『法次法向』，云何法次法向？」</td>
+    <td class='ch' title='t99.2.5c21'>爾時，有異比丘來詣佛所。 頭面作禮，却住一面。 白佛言： 「如世尊說『法次法向』。 云何法次法向？」</td>
     <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head and withdrew to stand at one side. He then said to the Buddha, “The Bhagavān says ‘going from one principle to the next.’ How does one go from one principle to the next?”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c23'>佛告比丘： 「善哉，善哉！汝今欲知法次法向耶？」</td>
+    <td class='ch' title='t99.2.5c23'>佛告比丘： 「善哉，善哉！汝今欲知法次法向耶？」</td>
     <td id='p3'>3. The Buddha told the monk, “Good, good! Do you want now to know about going from one principle to the next?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c24'>比丘白佛： 「唯然，世尊。」</td>
+    <td class='ch' title='t99.2.5c24'>比丘白佛： 「唯然，世尊。」</td>
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c24'>佛告比丘： 「諦聽，善思。 當為汝說。 比丘，於色向厭、離欲、滅盡是名法次法向。 如是受、想、行、識⋯於識向厭、離欲、滅盡是名法次法向。」</td>
+    <td class='ch' title='t99.2.5c24'>佛告比丘： 「諦聽，善思。 當為汝說。 比丘，於色向厭、離欲、滅盡是名法次法向。 如是受、想、行、識⋯於識向厭、離欲、滅盡是名法次法向。」</td>
     <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain this for you. Monk, heading for disillusionment with form, becoming free of desire for it, and completely ceasing it is called going from one principle to the next. <em>It’s the same with feeling, conception, volition, and awareness</em> … heading for disillusionment with awareness, becoming free of desire for it, and completely ceasing it is called going from one principle to the next.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.5c27'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
+    <td class='ch' title='t99.2.5c27'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 </table>
@@ -44,8 +44,8 @@ next: SA1_34.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 27 in the <cite>Taisho</cite> edition and no. 33 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005c20" target="_blank">T99.2.5c20-8</a>). It, the previous two, and the next two <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>going from one principle to the next</em>. C. 法次法向, P. <em>dhammānudhammappaṭipatti</em>. Lit. “proceeding from [one] <em>dharma</em> to the next <em>dharma</em>.” The C. translation of this term coupled with the explanation given by the Buddha suggests that it was interpreted to mean progressing through the gradual path to liberation in steps or stages. Here, the process of liberation from desire is used as the example for this, and this forces <em>dharma</em> to be read as a “mental state” or “principle.” I’ve opted for “principle,” along the lines of <em>dharma</em>’s common meaning of “rule” or “law.” [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 27 in the <cite>Taisho</cite> edition and no. 33 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005c20" target="_blank">T99.2.5c20-8</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0036a03" target="_blank">Y30.36a3-8</a>). It, the previous two, and the next two <em>sūtra</em>s are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29</a>-<a href="SA1_30.html" target="_blank">30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115</a>-<a href="https://suttacentral.net/sn22.116" target="_blank">116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>going from one principle to the next</em>. C. <span class="ch">法次法向</span>, P. <em>dhammānudhammappaṭipatti</em>. Lit. “proceeding from [one] <em>dharma</em> to the next <em>dharma</em>.” The C. translation of this term coupled with the explanation given by the Buddha suggests that it was interpreted to mean progressing through the gradual path to liberation in steps or stages. Here, the process of liberation from desire is used as the example for this, and this forces <em>dharma</em> to be read as a “mental state” or “principle.” I’ve opted for “principle,” along the lines of <em>dharma</em>’s common meaning of “rule” or “law.” [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
