--- a/01_agama/samyukta/01/SA1_34.md
+++ b/01_agama/samyukta/01/SA1_34.md
@@ -14,31 +14,31 @@ next: SA1_35.html
   <th class='ch'>（二八） 涅槃</th>
   <th class='en'>34 (28). Nirvāṇa</th>
   <tr>
-    <td class="ch" title='t99.2.5c29'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.5c29'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a1'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，如世尊所說『得見法涅槃』，云何比丘得見法涅槃？」</td>
+    <td class='ch' title='t99.2.6a1'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，如世尊所說『得見法涅槃』。 云何比丘得見法涅槃？」</td>
     <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. He then said to the Buddha, “Bhagavān, the Bhagavān says ‘attain <em>nirvāṇa</em> in the present life.’ How does a monk attain <em>nirvāṇa</em> in the present life?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a3'>佛告比丘： 「善哉，善哉！汝今欲知見法涅槃耶？」</td>
+    <td class='ch' title='t99.2.6a3'>佛告比丘： 「善哉，善哉！汝今欲知見法涅槃耶？」</td>
     <td id='p3'>3. The Buddha told the monk, “Good, good! Do you want now to know about <em>nirvāṇa</em> in the present life?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a4'>比丘白佛： 「唯然，世尊。」</td>
+    <td class='ch' title='t99.2.6a4'>比丘白佛： 「唯然，世尊。」</td>
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a5'>佛告比丘： 「諦聽，善思。 當為汝說。」</td>
+    <td class='ch' title='t99.2.6a5'>佛告比丘： 「諦聽，善思。 當為汝說。」</td>
     <td>The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain it for you.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a6'>佛告比丘： 「於色生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。 如是受、想、行、識⋯於識生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。」</td>
+    <td class='ch' title='t99.2.6a6'>佛告比丘： 「於色生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。 如是受、想、行、識⋯於識生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。」</td>
     <td id='p4'>4. The Buddha told the monk, “Becoming disillusioned with form, becoming free of desire for it, and completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life. <em>It’s the same with feeling, conception, volition, and awareness</em> … becoming disillusioned with awareness, becoming free of desire for it, completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6a10'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
+    <td class='ch' title='t99.2.6a10'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 </table>
@@ -48,7 +48,7 @@ next: SA1_35.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 28 in the <cite>Taisho</cite> edition and no. 34 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005c29" target="_blank">T99.2.5c29-6a11</a>). It, the previous three, and the next <em>sūtra</em> are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29-30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115-116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 28 in the <cite>Taisho</cite> edition and no. 34 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005c29" target="_blank">T99.2.5c29-6a11</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0036a09" target="_blank">Y30.36a9-15</a>). It, the previous three, and the next <em>sūtra</em> are variants of <a href="SA1_29.html" target="_blank">SĀ 1.29</a>-<a href="SA1_30.html" target="_blank">30</a> that feature anonymous monks who bring questions to the Buddha, rather than Rāhula. All five <em>sūtra</em>s comprise a separate chapter with their own <em>uddāna</em> verse and correspond to <a href="https://suttacentral.net/sn22.115" target="_blank">SN 22.115</a>-<a href="https://suttacentral.net/sn22.116" target="_blank">116</a>. While they each feature a question about a different expression used by the Buddha, his explanations all refer back to the same principle of liberation from desire for the five aggregates. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
