--- a/01_agama/samyukta/01/SA1_7.md
+++ b/01_agama/samyukta/01/SA1_7.md
@@ -14,19 +14,19 @@ next: SA1_8.html
   <th class='ch'>（四） 不知</th>
   <th class='en'>7 (4). Not Knowing (2)</th>
   <tr>
-    <td class="ch" title='t99.2.1b6'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.1b6'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.1b6'>爾時，世尊告諸比丘： 「於色不知不明，不斷不離欲，心不解脫者，則不能越生、老、病、死怖。 如是，受⋯想⋯行⋯識不知不明，不斷不離欲貪，心不解脫者，則不能越生、老、病、死怖。</td>
+    <td class='ch' title='t99.2.1b6'>爾時，世尊告諸比丘： 「於色不知不明，不斷不離欲，心不解脫者，則不能越生、老、病、死怖。 如是，受⋯想⋯行⋯識不知不明，不斷不離欲貪，心不解脫者，則不能越生、老、病、死怖。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one doesn’t know and understand form and doesn’t stop and become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death. Thus, when one doesn’t know and understand feeling … conception … volition … awareness and doesn’t stop and become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.1b7'>「比丘，於色若知若明，若斷若離欲，則能越生、老、病、死怖。諸比丘！若知若明，若離欲貪，心解脫者，則能越生、老、病、死怖。 如是，受⋯想⋯行⋯識若知若明，若斷若離欲貪，心解脫者，則能越生、老、病、死怖。」</td>
+    <td class='ch' title='t99.2.1b7'>「比丘，於色若知若明，若斷若離欲，則能越生、老、病、死怖。諸比丘！若知若明，若離欲貪，心解脫者，則能越生、老、病、死怖。 如是，受⋯想⋯行⋯識若知若明，若斷若離欲貪，心解脫者，則能越生、老、病、死怖。」</td>
     <td id='p3'>3. “Monks, if someone knows and understands form and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.<sup id="ref2"><a href="#n2">2</a></sup> Thus, if someone knows and understands feeling … perception … volition … awareness and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.1b10'>時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.1b10'>時，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,12 +36,12 @@ next: SA1_8.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 4 in the <cite>Taisho</cite> edition and no. 7 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001b06" target="_blank">T99.2.1b6-15</a>). It’s a variant of the previous and next two <em>sūtra</em>s. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is also parallel with <a href="../02/SA2_7.html" target="_blank">SĀ 2.7</a>. See the notes to <a href="SA1_6.html" target="_blank">SĀ 1.6</a> for more about its relationship to its Pali counterpart. [<a href="#ref1">back</a>]</li>
-<li id="n2">The first sentence of this paragraph was apparently copied twice by an inattentive copyist. I’ve followed Yinshun’s suggestion to delete one of them. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 4 in the <cite>Taisho</cite> edition and no. 7 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001b06" target="_blank">T99.2.1b6-15</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0006a14" target="_blank">Y30.6a14-7a9</a>). It’s a variant of the previous and next two <em>sūtra</em>s. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is also parallel with <a href="../02/SA2_7.html" target="_blank">SĀ 2.7</a>. See the notes to <a href="SA1_6.html" target="_blank">SĀ 1.6</a> for more about its relationship to its Pali counterpart. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>The first sentence of this paragraph was apparently copied twice by an inattentive copyist. I’ve followed Yinshun’s suggestion to delete one of them. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 23 February 2024</p>
+<p class='revised'>Last Revised: 10 December 2023</p>
 
 <hr/>
